[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhir-data-generator"
version = "1.0.0"
description = "Generate synthetic FHIR resource data with flattened schema"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry", 
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

# Core dependencies
dependencies = [
    "fhir.resources>=7.0.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
]

# Optional dependencies
[project.optional-dependencies]
json5 = ["json5"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]
docs = [
    "mkdocs",
    "mkdocs-material", 
]
all = [
    "json5",
    "pytest>=7.0.0", 
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
    "mkdocs", 
    "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/yourusername/fhir-data-generator"
Repository = "https://github.com/yourusername/fhir-data-generator" 
Documentation = "https://yourusername.github.io/fhir-data-generator"
"Bug Tracker" = "https://github.com/yourusername/fhir-data-generator/issues"

[project.scripts]
fhir-generate = "generate_fhir_data:main"

# Tool configurations
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=. --cov-report=term-missing"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]